# pinetime-rust

./: .gitmodules  Cargo.toml  README.md  build.rs  flash-softdevice.sh  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: backlight.rs  battery.rs  bluetooth.rs  delay.rs  display.rs  main.rs  vibration.rs
src/bluetooth/: bluetooth.rs  mod.rs
src/peripherals/: accelerometer.rs  backlight.rs  battery.rs  button.rs  display.rs  heartrate.rs  mod.rs  spi_flash.rs  touch.rs  vibration.rs  vibrator.rs
src/peripherals/heartrate/: libheart_bindings.rs  mod.rs  ppg_processing.rs
src/system/: bluetooth.rs  config.rs  delay.rs  flash.rs  i2c.rs  mod.rs  monotonic_nrf52.rs  time.rs
src/ui/: default_watchface.rs  mod.rs
