[package]
name = "pinetime-rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
chrono = "0.4.24"

[dependencies]
# Core dependencies
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Embassy
embassy-executor = { version = "0.5", features = ["defmt", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-nrf = { version = "0.1", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
embassy-sync = "0.5"
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
# embassy-net = { git = "https://github.com/embassy-rs/embassy", dir = "tree/master/embassy-net", branch = "master", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"], optional = true }

# Storage
# embedded-storage = "0.3.0"

# IO
debouncr = "0.2"
embedded-io = "0.6"

# Bluetooth
# nrf-softdevice = "0.0.0"
# rubble = { git = "https://github.com/thecodechemist99/rubble", dir = "tree/master/rubble"}
# rubble-nrf5x = { git = "https://github.com/thecodechemist99/rubble", dir = "tree/master/rubble-nrf5x", features = ["52832"] }
# Maybe switch to bleps in the future, but for now just take the easy route
nrf-softdevice = { version = "0.1", features = ["ble-peripheral", "ble-gatt-server", "ble-gatt-client", "nrf52832", "s132"] }

# Graphics
chrono = { version = "0.4.24", default-features = false }
display-interface-spi = "0.4.1"
embedded-graphics = "0.8"
format_no_std = "1.0.0"
mipidsi = "0.7"
profont = "0.7"

# Touch control
cst816s = { version = "0.1", git = "https://github.com/thecodechemist99/cst816s" }

# Debug probe
defmt = "=0.3.2"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
opt-level = "z"
strip = false
debug = 2

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = 'abort'
